<resources>
    <string name="app_name">玄音</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txt_toolbar">Toolbar</string>
    <string name="txt_floating_action_button">FloatActionButton</string>
    <string name="txt_navigation_view">NavigationView</string>
    <string name="txt_other">Other</string>
    <string name="txt_yo_yo">Yo Yo</string>
    <string name="title_activity_code_lab">CodeLabActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="copy">copy</string>
    <string name="success_copy">copy</string>

    <string name="select_items_count">已选择%1$d项</string>
    <string name="select_cancel">取消</string>
    <string name="select_others">反选</string>
    <string name="select_all">全选</string>

    <string name="remove">删除</string>
    <string name="more">更多</string>
    <string name="add_to_playlist">添加到播放列表</string>

    <string name="create_playlist">新建播放列表</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <string name="all_songs">所有歌曲</string>
    <string name="play_list">播放列表</string>

    <string-array name="tabTitles">
        <item>歌曲列表</item>
        <item>播放列表</item>
    </string-array>

    <string name="settings">设置</string>

    <string-array name="pref_list_entries">
        <item>Alpha</item>
        <item>Bravo</item>
        <item>Charlie</item>
    </string-array>
    <string-array name="pref_list_values">
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>
    <string-array name="sp_navigation_items">
        <item>@string/all_songs</item>
        <item>@string/play_list</item>
    </string-array>

    <string name="delete">删除</string>
    <string name="create">新建</string>

    <string name="all_recycle">循环全部</string>
    <string name="play_mode">循环模式</string>
    <string-array name="play_mode_list">
        <item>@string/all_recycle</item>
        <item>单曲循环</item>
        <item>随机播放</item>
        <item>顺序播放</item>
        <item>当前歌曲</item>
    </string-array>
    <string-array name="play_mode_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="title_activity_lock">LockActivity</string>

    <string name="setup_pattern_lock">绘制解锁图案</string>
    <string name="confirm_pattern_lock">再次绘制图案进行确认</string>
    <string name="clear_pattern_view">重绘</string>
    <string name="confirm_pattern_view">确认</string>
    <string name="please_input_pattern_lock">确认已保存的图案</string>
    <string name="modify_pattern_lock">更改密码</string>
    <string name="clear_pattern_lock">清除密码</string>
    <string name="finger_up_after_finish_input">输入完成后请抬起手指</string>
    <string name="please_input_again">请重试</string>
    <string name="setup_pattern_lock_4_cell_at_least">绘制解锁图案, 请至少连接六个点</string>
    <string name="has_record_pattern_lock">已记录图案</string>
    <string name="your_new_patter_lock">您的新解锁图案</string>
    <string name="patter_lock_manager">密码管理</string>



</resources>
