<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jw.cool.xuanmusicplayer.fragments.NavigationLeftFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        style="@style/NAV_TEXT_VIEW"
        android:id="@+id/nav_settings"
        android:text="@string/settings" />
    <TextView
        style="@style/NAV_TEXT_VIEW"
        android:id="@+id/nav_all_songs"
        android:text="@string/all_songs" />
    <TextView
        style="@style/NAV_TEXT_VIEW"
        android:id="@+id/nav_play_list"
        android:text="@string/play_list" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/nav_play_list_items"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

</LinearLayout>

<!--<ListView
    android:id="@+id/nav_play_list_list_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

</ListView>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jw.cool.xuanmusicplayer.fragments.NavigationLeftFragment"
    android:layout_height="match_parent" android:layout_width="match_parent">

</android.support.v4.widget.NestedScrollView>-->

