<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jw.cool.xuanmusicplayer.LockActivity">

    <TextView
        android:id="@+id/setup_patter_lock"
        android:text="@string/setup_pattern_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <me.zhanghai.patternlock.PatternView
        android:id="@+id/patter_view"
        android:layout_below="@id/setup_patter_lock"
        android:layout_above="@id/clear_and_confirm"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/clear_and_confirm"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2.5">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/clear_pattern_view"
            android:text="@string/clear_pattern_view"
            android:visibility="gone"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/confirm_pattern_view"
            android:text="@string/confirm_pattern_view"
            android:visibility="gone"/>
    </LinearLayout>
</RelativeLayout>
